After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 670595 - nautilus crashed with SIGSEGV in do_unmount()
nautilus crashed with SIGSEGV in do_unmount()
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Crashers
3.3.x
Other Linux
: Normal critical
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-02-22 10:47 UTC by Sebastien Bacher
Modified: 2012-03-05 17:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed patch (815 bytes, patch)
2012-02-27 20:39 UTC, Michael Terry
committed Details | Review

Description Sebastien Bacher 2012-02-22 10:47:50 UTC
The bug got report against nautilus 3.3.90 on https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/937824 (but is not new to this version, we got earlier bug reports in the serie)

"#0  do_unmount (data=0x1) at nautilus-file-operations.c:2071
        mount_op = <optimized out>
  • #1 empty_trash_job_done
    at nautilus-file-operations.c line 6323
  • #2 mainloop_proxy_free
    at /build/buildd/glib2.0-2.31.18/./gio/gioscheduler.c line 301
  • #3 g_source_set_callback_indirect
    at /build/buildd/glib2.0-2.31.18/./glib/gmain.c line 1245

Comment 1 Michael Terry 2012-02-27 20:39:31 UTC
Created attachment 208521 [details] [review]
Proposed patch

This should fix the issue.  do_unmount was being used as a done_callback for empty_trash_job, but didn't have the right prototype for that.  As a result, it tried to interpret a gboolean as a pointer to a data structure.

This patch puts the gboolean into the prototype to avoid the crash (though it doesn't do anything useful with that 'success' flag).
Comment 2 Cosimo Cecchi 2012-02-27 21:00:46 UTC
Review of attachment 208521 [details] [review]:

Thanks Michael, looks good!
Comment 3 Cosimo Cecchi 2012-03-05 17:05:25 UTC
Pushed this to master now.